# amplifier-health-provider-tool

./: .gitignore  README.md  example-settings.yaml  healthcare-config-template.yaml  npi_client.py  pyproject.toml  search_providers.py  simple-test.py  test-bundle-load.py  test_tool_directly.py
amplifier_tool_health_provider/: __init__.py  tool.py
bundle/: bundle.md
docs/: README.md
docs/01-vision/: VISION.md
docs/02-requirements/epics/: 01-provider-search.md  README.md
