[project]
name = "amplifier-tool-health-provider"
version = "0.1.0"
description = "AI-driven health insurance provider search tool for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
